--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,10 @@
 Package: musicr
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Download scrobbles from last.fm
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Conor Neilson
+Maintainer: Conor Neilson <condwanaland@gmail.com>
+Description: Helper functions to fetch and use your last.fm scrobbles
+License: GPL v3
 Encoding: UTF-8
 LazyData: true
