--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,11 @@ Title: Download scrobbles from last.fm
 Version: 0.1.0
 Author: Conor Neilson
 Maintainer: Conor Neilson <condwanaland@gmail.com>
-Description: Helper functions to fetch and use your last.fm scrobbles
-License: GPL v3
+Description: Helper functions to fetch and use your last.fm scrobbles.
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
+Imports: reticulate
+RoxygenNote: 6.0.1
+Suggests: 
+    testthat
