--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: scrobbler
 Type: Package
-Title: Download scrobbles from last.fm
+Title: Download Scrobbles from Last.fm
 Version: 0.1.0
 Author: Conor Neilson
 Maintainer: Conor Neilson <condwanaland@gmail.com>
-Description: Helper functions to fetch and use your last.fm scrobbles.
+Description: Helper functions to fetch and use your 'last.fm' 'scrobbles'.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
