--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,8 +10,11 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 Suggests: 
-    testthat
+    testthat,
+    knitr,
+    rmarkdown
 URL: https://github.com/condwanaland/scrobbler
 BugReports: https://github.com/condwanaland/scrobbler/issues
 Imports: 
     anytime
+VignetteBuilder: knitr
