--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Download 'Scrobbles' from 'Last.fm'
 Version: 0.1.0
 Author: Conor Neilson
 Maintainer: Conor Neilson <condwanaland@gmail.com>
-Description: Helper functions to fetch and use your 'last.fm' 'scrobbles'.
+Description: Helper functions to fetch and use your 'last.fm'<https://www.last.fm> 'scrobbles'.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
@@ -16,5 +16,6 @@ Suggests:
 URL: https://github.com/condwanaland/scrobbler
 BugReports: https://github.com/condwanaland/scrobbler/issues
 Imports: 
-    anytime
+    anytime,
+    httr
 VignetteBuilder: knitr
