--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,10 +5,10 @@ Version: 0.1.0
 Author: Conor Neilson
 Maintainer: Conor Neilson <condwanaland@gmail.com>
 Description: 'Last.fm'<https://www.last.fm> is a music platform focussed on building a 
-    detailed profile of a users listening habits. It does this by 'scrobbling` (recording) 
+    detailed profile of a users listening habits. It does this by 'scrobbling' (recording) 
     every track you listen to on other platforms ('spotify', 'youtube', 'soundcloud' etc)
     and transferring them to your 'Last.fm' database. This allows 'Last.fm' to act as a 
-    complete record of your entire listening history. `scrobbler` provides helper functions
+    complete record of your entire listening history. 'scrobbler' provides helper functions
     to download and analyse your listening history in R.
 License: GPL-3
 Encoding: UTF-8
