--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@
 language: R
 sudo: false
 cache: packages
-r_check_args: "--no-build-vignettes"
-r_build_args: "--no-build-vignettes"
+# r_check_args: "--no-build-vignettes"
+# r_build_args: "--no-build-vignettes"
