--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,9 @@ sudo: false
 cache: packages
 # r_check_args: "--no-build-vignettes"
 # r_build_args: "--no-build-vignettes"
+
+r_packages:
+  - covr
+
+after_success:
+  - Rscript -e 'library(covr); codecov()'
