--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,5 +21,6 @@ Suggests:
 URL: https://github.com/condwanaland/scrobbler
 BugReports: https://github.com/condwanaland/scrobbler/issues
 Imports: 
-    anytime
+    anytime,
+    httr
 VignetteBuilder: knitr
