--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,5 +22,6 @@ URL: https://github.com/condwanaland/scrobbler
 BugReports: https://github.com/condwanaland/scrobbler/issues
 Imports: 
     anytime,
-    httr
+    httr,
+    jsonlite
 VignetteBuilder: knitr
