--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,10 +17,11 @@ Suggests:
     httptest,
     knitr,
     rmarkdown,
-    testthat
+    testthat (>= 3.0.0)
 URL: https://github.com/condwanaland/scrobbler
 BugReports: https://github.com/condwanaland/scrobbler/issues
 Imports: 
     httr,
     jsonlite
 VignetteBuilder: knitr
+Config/testthat/edition: 3
